# robosnap

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTICE  README.md  docker-compose.auto.yml  pyproject.toml
configs/: auto_pipeline.env.example  gui.env.example
configs/prompts/: background_inpaint.txt
docker/: Dockerfile.auto  Dockerfile.auto.dockerignore  README.md  auto-entrypoint.sh  entrypoint.sh
docs/: automatic_pipeline_setup.md
robosnap/: scene_paths.py
robosnap/alignment/: compose_scene_vggt.py  run_sam3d_vggt_icp.py  run_vggt_single_image.py  vggt_io.py
robosnap/background/: run_lyra2_gs_recon.py  run_lyra2_video_generation.py  run_lyra_background.py
robosnap/gui/RoboSnapGUI/: articulate_manager.py  articulate_tool_manager.py  inference_interactive_videoseg.py  media_utils.py  sam3d_bridge.py  viewer_html.py
robosnap/pipeline/: __init__.py  auto_layered_scene.py
robosnap/pose/: apply_scale_to_glb.py  foundationpose.py  run_foundationpose_from_vggt.py
robosnap/preprocess/: __init__.py  auto_segment_image.py  prepare_sam3d_meshes.py  sam3_mask_recovery.py  sam3_mask_retry.py
robosnap/refinement/: __init__.py  gravity_align_scene.py  gravity_transfer.py  run_sim_ready_refinement.py  sf_real2sim_layoutopt.py  stabilize_scene_projection.py
robosnap/rendering/: __init__.py  blender_render_glb.py  fit_scene_to_gaussian.py  normalize_assets.py  place_assets_from_layout.py  render_gaussian_preview.py  render_layered_scene.py  render_scene.py
scripts/: download_auto_checkpoints.py  install.sh  install_auto_pipeline.sh  install_native_envs.sh  render_gravity_aligned_scene.sh  run_auto_pipeline.sh  run_diffusers_inpaint.py  run_gemini_image_edit.py  run_gemini_vlm.py  run_gui.sh  setup_auto_sources.sh
tests/: test_cli_entrypoints.py  test_diffusers_inpaint_adapter.py  test_gemini_image_edit.py  test_gemini_vlm_adapter.py  test_mask_bbox_quality.py  test_mask_components.py  test_preprocess_masks.py  test_projection_stabilization.py  test_sam3_mask_retry.py  test_sam3d_runtime_layout.py  test_sim_ready_scene_graph.py
(+25 files in other folders)
