[project]
name = "robosnap"
version = "0.1.0"
description = "GUI-first real-to-sim asset annotation and generation toolkit."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "gradio",
  "opencv-python",
  "numpy",
  "pillow",
  "torch",
]

[project.optional-dependencies]
auto = [
  "trimesh",
  "open3d",
  "scipy",
  "scikit-image",
]
render = [
  "gsplat>=1.5,<1.6",
  "plyfile>=1.1",
  "pyrender>=0.1.45",
  "PyOpenGL>=3.1",
  "ninja",
]
sim = [
  "open3d>=0.19,<0.20",
  "sapien>=2.2,<2.3",
  "scipy",
  "tqdm",
  "trimesh>=4.11,<5",
]
inpaint = [
  "diffusers>=0.30,<0.31",
  "transformers>=4.36,<4.37",
  "accelerate",
  "safetensors",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["robosnap", "robosnap.*"]
