[project]
name = "robosnap"
version = "0.1.0"
description = "One-shot real-to-sim scene generation toolkit."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "gradio",
  "opencv-python",
  "numpy",
  "pillow",
  "torch",
]

[project.optional-dependencies]
auto = [
  "trimesh",
  "open3d",
  "scipy",
  "scikit-image",
]
render = [
  "gsplat>=1.5,<1.6",
  "plyfile>=1.1",
  "pyrender>=0.1.45",
  "PyOpenGL>=3.1",
  "ninja",
]
sim = [
  "manifold3d==3.4.0",
  "numpy==1.26.4",
  "open3d==0.19.0",
  "opencv-python==4.11.0.86",
  "rtree==1.4.1",
  "sapien==2.2.2",
  "scipy==1.15.3",
  "tqdm==4.67.1",
  "trimesh==4.11.4",
  "vhacdx==0.0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robosnap", "robosnap.*"]
exclude = ["robosnap.datasets", "robosnap.datasets.*"]
